
  - Added a script to automatically verify that all source files include a
    copyright notice.

  - Removed ancestral Beancount documentation from eons ago. These notes and
    conversationsa are now wildly irrelevant to the current state of Beancount,
    and all the documentation from Google Docs is vastly more recent and
    obsoletes all these old snippets and notes.


2016-12-03

  - Fixed fava bug #429, avoid empty conversion entries if the cost of the
    conversion balance is zero. See:
    https://github.com/beancount/fava/issues/429.


2016-11-20

  - Fixed bugs in bean-format; in order to do this properly I made bean-format
    reuse the globally defined regular expressions for currency and account in
    the rest of Beancount's code. This makes bean-format depend on the Beancount
    installation. Bah, it's reasonable. This issue is related to issue #146.

  - Added ANY_META() function to the SQL shell's environment; ANY_META() allows
    you to query a posting's metadata, falling back on the parent entry's
    metadata. This idea was suggested by Stefano Zacchiroli in
    https://groups.google.com/d/msg/beancount/jh-n4rvbQAI/Hz5Mmd60BAAJ. I also
    added the first unit tests for environment functions--I'll have to write all
    of those at some point.

  - Made unsupported cost specifications in the SIMPLE booking algorithm issue
    an appropriate error. For example, instead of just ignoring the cost spec in
    this:

          2014-10-15 * "buy widgets"
            Assets:Inventory     10 WIDGET {} ;; Not supported.
            Assets:Cash         -80 GBP

    It will issue an error. See
    https://groups.google.com/d/msg/beancount/9NBcT-SXZMQ/sy7Z3dIdBQAJ for
    context.


2016-11-12

  - Made the Emacs prefix key configurable via a new beancount-mode-map-prefix
    variable. See discussion here:
    https://groups.google.com/d/msg/beancount/_7TscZ9phNE/K8PkcRMpBAAJ


2016-11-06
