@@ -1,0 +1,2 @@
+Old code snippets saved to continue the development of the AVERAGE booking
+method in the 'booking' branch.
