@@ -1,2 +1,1 @@
-Helper scripts to operate on the source code itself, most often to tidy up
-things for better code health.
+Misc experiments for development.
