@@ -1,0 +1,2 @@
+Helper scripts you may be able to use in order to convert input files from
+Beancount v1, Ledger, HLedger or other formats.
